- Fixed bug #51421 (Abstract __construct constructor argument list not enforced)